# folks

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  CONTRIBUTING.md  HACKING  HACKING.md  MAINTAINERS  Makefile.am  NEWS  README  README.md  autogen.sh  check.mk  configure.ac  folks.doap  git.mk  meson.build  meson_options.txt  telepathy-check.vala  valgrind.mk
backends/: Makefile.am  backend-library.mk  backend.mk  meson.build  namespace.vala.in
backends/bluez/: Makefile.am  bluez-backend-factory.vala  bluez-backend.vala  bluez-persona-store.vala  bluez-persona.vala  meson.build  org-bluez-obex-client.vala  org-bluez.vala
backends/dummy/: Makefile.am  dummy-backend-factory.vala  meson.build
backends/eds/: Makefile.am  backend.mk  eds-backend-factory.vala  eds-backend.vala  meson.build
backends/key-file/: Makefile.am  folks-key-file.deps  kf-backend-factory.vala  kf-backend.vala  kf-persona-store.vala  kf-persona.vala  meson.build
backends/libsocialweb/: Makefile.am  meson.build  sw-backend-factory.vala  sw-backend.vala  sw-persona-store.vala  sw-persona.vala
backends/ofono/: Makefile.am  meson.build  ofono-backend-factory.vala  ofono-backend.vala  ofono-persona-store.vala  ofono-persona.vala  org-ofono.vala
backends/telepathy/: Makefile.am  backend.mk  folks-backend-telepathy-uninstalled.pc.in  folks-backend-telepathy.pc.in  folks-telepathy-uninstalled.pc.in  folks-telepathy.deps  folks-telepathy.pc.in  lowlevel.metadata  meson.build  tp-backend-factory.vala  tp-backend.vala  tp-lowlevel.c  tp-lowlevel.h  tp-lowlevel.metadata  tp-persona-store.vala  tp-persona.vala  tpf-logger.vala  tpf-persona-store.vala  tpf-persona.vala
backends/tracker/: Makefile.am  meson.build  tr-backend-factory.vala  tr-backend.vala  tracker-backend-factory.vala  tracker-backend.vala  tracker-persona-store.vala  tracker-persona.vala
docs/: .gitignore  Makefile.am  folks.toml.in  meson.build
docs/devhelp/: meson.build
docs/gtkdoc/: meson.build
docs/wiki/: concepts.valadoc  debugging.valadoc  glossary.valadoc
folks/: Makefile.am  abstract-field-details.vala  alias-details.vala  alias.vala  aliasable.vala  anti-linkable.vala  avatar-cache.vala  avatar-details.vala  avatar-owner.vala  avatar.vala  backend-store.vala  backend.vala  birthday-details.vala  birthday-owner.vala  build-conf.vapi  capabilities.vala  debug.vala  email-details.vala  emailable.vala  extended-info.vala  favouritable.vala  favourite-details.vala  favourite.vala  field-details.vala  folks-generics.vapi  folks-location.c  folks-location.h  folks-manager.c  folks-manager.h  folks-namespace.vala  folks-persona-priv.h  folks-persona-store-priv.h  folks-persona-store.c  folks-persona-store.h  folks-persona.c  folks-persona.h  folks-structured-name.c  folks-structured-name.h  folks-uninstalled.pc.in  folks.deps  (+54 more)
telepathy-people/: Makefile.am  alias.vala  individual-aggregator.vala  individual.vala  lowlevel.c  persona-store.vala  persona.vala  telepathy-people.pc.in  tp-lowlevel.c  tp-lowlevel.h  tp-persona.vala  tpp-lowlevel.c  tpp-lowlevel.h
tests/: Makefile.am  README  meson.build  template.test.in  test.mk
tests/bluez/: Makefile.am  device-properties.vala  individual-retrieval.vala  meson.build  vcard-parsing.vala
tests/data/: Makefile.am  backend-store-all.ini  gconf.path.in  meson.build
tests/dummy/: Makefile.am  add-persona.vala  individual-retrieval.vala  linkable-properties.vala  meson.build  search-view.vala
tests/eds/: Makefile.am  add-contacts-stress-test.vala  add-persona.vala  anti-linking.vala  avatar-details.vala  change-primary-store.vala  create-remove-stores.vala  double-aggregator.vala  email-details.vala  enable-disable-stores.vala  extended-info.vala  helper-create-many-contacts.vala  helper-delete-contacts.vala  helper-prepare-aggregator.vala  im-details.vala  individual-retrieval.vala  link-personas-diff-stores.vala  link-personas.vala  linkable-properties.vala  meson.build  name-details.vala  perf.vala  persona-store-tests.vala  phone-details.vala  postal-address-details.vala  remove-persona.vala  removing-contacts.vala  set-avatar.vala  set-birthday.vala  set-emails.vala  set-full-name.vala  set-gender.vala  set-im-addresses.vala  set-is-favourite.vala  set-names.vala  set-notes.vala  set-phones.vala  set-postal-addresses.vala  set-properties-race.vala  set-properties.vala  (+6 more)
tests/folks/: Makefile.am  abstract-field-details.vala  aggregation.vala  async-locking.vala  avatar-cache.vala  backend-loading.vala  field-details.vala  init.vala  linked-hash-set.vala  meson.build  name-details.vala  object-cache.vala  phone-field-details.vala  primary-store-changes.vala  small-set.vala  standalone-individuals.vala  utils.vala
tests/key-file/: Makefile.am  individual-retrieval.vala  meson.build
tests/lib/: Makefile.am  disconnection-queue.vala  folks-test-dbus.vapi  folks-test-uninstalled.pc.in  gtestdbus.c  gtestdbus.h  haze-remove-directory.c  meson.build  org-freedesktop-dbus-mock.vala  test-case-helper.c  test-case.vala  test-utils.vala
tests/libsocialweb/: Makefile.am  aggregation.vala  dummy-lsw.vala  meson.build
tests/telepathy/: Makefile.am  contact-properties.vala  contact-retrieval.vala  fake-tp-backend.vala  individual-properties.vala  individual-retrieval.vala  individual-zeitgeist.vala  init.vala  meson.build  persona-store-capabilities.vala  test-case.vala
tests/tools/: Makefile.am  dbus-session.sh  eds.sh  execute-test.sh  manager-file.py  meson.build  other.source  test.source  tracker.sh  with-session-bus-eds.sh  with-session-bus-tracker.sh  with-session-bus.sh
tests/tracker/: Makefile.am  add-contact.vala  add-persona.vala  additional-names-updates.vala  avatar-details-interface.vala  avatar-updates.vala  birthday-details-interface.vala  birthday-updates.vala  default-contact.vala  duplicated-emails.vala  duplicated-phones.vala  email-details-interface.vala  emails-updates.vala  family-name-updates.vala  favourite-details-interface.vala  favourite-updates.vala  link-personas.vala  (+44 more)
tools/: Makefile.am  import-pidgin.vala  import.vala  inspect.vala  meson.build
(+275 files in other folders)
